[package]
name = "aws-mfa"
version = "0.1.0"
authors = ["Toru Ogawa <Hakuyume@users.noreply.github.com>"]
edition = "2018"

[features]
default = ["yubikey"]
yubikey = ["ykoath"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dirs = "2.0"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
rprompt = "1.0"
rusoto_core = "0.43.0-beta.1"
rusoto_iam = "0.43.0-beta.1"
rusoto_sts = "0.43.0-beta.1"
rust-ini = "0.13"
tokio = { version = "0.2", features=["macros"] }
ykoath = { path = "../ykoath", optional = true }
